force-app/main/default/objects/Species__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>FSC</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>