force-app/main/default/objects/Species__c/fields/Genus__c.field-meta.xml
<CustomField>
    <fullName>Genus__c</fullName>
    <label>Genus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>