force-app/main/default/objects/Species__c/fields/Synonyms__c.field-meta.xml
<CustomField>
    <fullName>Synonyms__c</fullName>
    <label>Synonyms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>