force-app/main/default/objects/Species__c/fields/Translate__c.field-meta.xml
<CustomField>
    <fullName>Translate__c</fullName>
    <description>FSC</description>
    <label>Translate</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>